k8s-manifests/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-ui-service
spec:
  selector:
    app: heart-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
