k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: heart-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart-ui-service
                port:
                  number: 80
